--- a/styles/styles.css
+++ b/styles/styles.css
@@ -123,3 +123,64 @@
     top: -30px;
     left: -30px;
 }
+
+/* 5rd copy */
+.inverted-rounded-corner5 {
+    position: relative;
+    width: 300px;
+    height: 200px;
+    background-color: #F7F8F8;
+    overflow: hidden;
+}
+
+.inverted-rounded-corner5::before {
+    content: "";
+    position: absolute;
+    width: 60px;
+    height: 60px;
+    background-color: #F7F8F8;
+    border-radius: 50%;
+    top: -30px;
+    right: -30px;
+}
+
+.inverted-rounded-corner5::after {
+    content: "";
+    position: absolute;
+    width: 60px;
+    height: 60px;
+    background-color: #F7F8F8;
+    border-radius: 50%;
+    bottom: -30px;
+    right: -30px;
+}
+/* 6rd copy */
+.inverted-rounded-corner6 {
+    position: relative;
+    width: 300px;
+    height: 200px;
+    background-color: #F7F8F8;
+    overflow: hidden;
+}
+
+.inverted-rounded-corner6::before {
+    content: "";
+    position: absolute;
+    width: 60px;
+    height: 60px;
+    background-color: #F7F8F8;
+    border-radius: 50%;
+    bottom: -30px;
+    left: -30px;
+}
+
+.inverted-rounded-corner6::after {
+    content: "";
+    position: absolute;
+    width: 60px;
+    height: 60px;
+    background-color: #F7F8F8;
+    border-radius: 50%;
+    top: -30px;
+    left: -30px;
+}
